add footer + webpage icon, create page component

--- a/src/styles/_constans.scss
+++ b/src/styles/_constans.scss
@@ -2,3 +2,5 @@ $border-color: #144fc6;
 $fill-color: #6ab3f8;
 $white-color: #fff;
 $page-background: #3b3b98;
+$page-footer: #5353b4;
+$link-color: #eab543;
