--- a/src/pages/DrinkWater/styles/DrinkWater.scss
+++ b/src/pages/DrinkWater/styles/DrinkWater.scss
@@ -1,4 +1,12 @@
-@import "./constans";
+@import "../../../styles/constans";
+
+.page-title {
+    font-weight: bold;
+    margin: 20px 0 10px 0;
+    color: $white-color;
+    text-transform: uppercase;
+    text-align: center;
+}
 
 .app-container {
     background-color: $page-background;
@@ -10,12 +18,4 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-}
-
-.page-title {
-    font-weight: bold;
-    margin: 20px 0 10px 0;
-    color: $white-color;
-    text-transform: uppercase;
-    text-align: center;
 }
