--- a/src/components/Credits/styles/Credits.scss
+++ b/src/components/Credits/styles/Credits.scss
@@ -1,13 +1,6 @@
 @import "../../../styles/constans";
 
-.credits {
-    position: relative;
-    width: 100%;
-    background-color: $page-footer;
-    height: 25px;
-}
-
-.credits p {
+.credits-content {
     font-size: 12px;
     color: $white-color;
     position: absolute;
@@ -17,17 +10,7 @@
     margin: 5px;
 }
 
-.credits p a {
+.credits-content a {
     text-decoration: none;
     color: $link-color;
-}
-
-@media (max-width: 600px) {
-    .credits {
-        height: 20px;
-    }
-
-    .credits p {
-        font-size: 11px;
-    }
 }
