--- a/src/pages/DrinkWater/styles/DrinkWater.scss
+++ b/src/pages/DrinkWater/styles/DrinkWater.scss
@@ -6,6 +6,7 @@
     color: $white-color;
     text-transform: uppercase;
     text-align: center;
+    letter-spacing: 1.5px;
 }
 
 .app-container {
