--- a/src/styles/_constans.scss
+++ b/src/styles/_constans.scss
@@ -1,7 +1,12 @@
 $border-color: #144fc6;
 $fill-color: #6ab3f8;
 $white-color: #fff;
-$page-background: #3b3b98;
-$page-footer: #5353b4;
+$page-background: #40739e; // #54a0ff; //#3b3b98;
+$page-footer: #487eb0; // #2e86de; // #5353b4;
 $link-color: #eab543;
-$navbar-link: #182c61;
+$navbar-link-active: #ff9f43; //#182c61;
+$navbar-link: #c8d6e5; // #222f3e;
+$water-color: #0097e6;
+$tea-color: #20bf6b;
+$juice-color: #fa8231;
+$coffee-color: #6f4e37;
