--- a/src/pages/DrinkWater/styles/DrinkWater.scss
+++ b/src/pages/DrinkWater/styles/DrinkWater.scss
@@ -1,22 +1,21 @@
 @import "../../../styles/constans";
 
-.page-title {
-    font-weight: bold;
-    margin: 20px 0 10px 0;
-    color: $white-color;
-    text-transform: uppercase;
-    text-align: center;
-    letter-spacing: 1.5px;
-}
-
 .app-container {
     background-color: $page-background;
     width: 100%;
-    height: 100vh;
-    overflow: hidden;
+
+    min-height: 100vh;
+
     display: flex;
 
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+}
+
+@media (max-width: 600px) {
+    .app-container {
+        flex-direction: column;
+        overflow-y: scroll;
+        height: 100%;
+    }
 }
