--- a/src/components/Credits/styles/Credits.scss
+++ b/src/components/Credits/styles/Credits.scss
@@ -1,16 +1,22 @@
 @import "../../../styles/constans";
 
 .credits-content {
+    padding: 10px;
     font-size: 12px;
     color: $white-color;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    margin: 5px;
+    text-align: center;
+    margin: 5px 20px;
 }
 
 .credits-content a {
     text-decoration: none;
     color: $link-color;
+}
+
+@media (max-width: 600px) {
+    .credits-content {
+        font-size: 10px;
+        padding: 0;
+        padding-top: 2px;
+    }
 }
