--- a/src/containers/Footer/styles/Footer.scss
+++ b/src/containers/Footer/styles/Footer.scss
@@ -1,18 +1,14 @@
 @import "../../../styles/constans";
 
 .Footer {
-    position: relative;
+    display: flex;
+    justify-content: center;
     width: 100%;
     background-color: $page-footer;
-    height: 25px;
 }
 
 @media (max-width: 600px) {
     .Footer {
-        height: 20px;
-    }
-
-    .Footer p {
-        font-size: 11px;
+        flex-direction: column;
     }
 }
