--- a/src/containers/Navbar/styles/Navbar.scss
+++ b/src/containers/Navbar/styles/Navbar.scss
@@ -16,18 +16,17 @@
     list-style: none;
     width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     // position: absolute;
     & > li {
         font-size: 28px;
+        margin: 0 20px;
     }
 }
 
 @media (max-width: 600px) {
     .navbar-container ul {
-        justify-content: center;
-
         & > li {
             font-size: 20px;
         }
