--- a/src/pages/Home/styles/Homepage.scss
+++ b/src/pages/Home/styles/Homepage.scss
@@ -1,10 +1,14 @@
 @import "../../../styles/constans";
 
 .homepage-container {
-    height: 100vh;
+    height: 90vh;
     width: 100%;
     background-color: $page-background;
     margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
     & > .page-title {
         font-weight: bold;
@@ -13,5 +17,22 @@
         color: $white-color;
         text-align: center;
         letter-spacing: 1.5px;
+        font-size: 58px;
+    }
+
+    & > .homepage-space {
+        height: 30%;
+    }
+
+    & > .homepage-paragraph {
+        width: 400px;
+    }
+}
+
+@media (max-width: 600px) {
+    .homepage-container {
+        & > .homepage-paragraph {
+            width: 100%;
+        }
     }
 }
