buttons on drinkwater page now responsive

--- a/src/containers/DrinkWater/styles/DrinkWater.scss
+++ b/src/containers/DrinkWater/styles/DrinkWater.scss
@@ -12,10 +12,14 @@
 
 .drink-buttons-container {
     display: flex;
-
+    position: absolute;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    // margin-right: 100px;
+    right: 300px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .drink-container .page-title {
@@ -33,4 +37,19 @@
     color: $white-color;
     text-align: center;
     letter-spacing: 1px;
+}
+
+@media (max-width: 1200px) {
+    .drink-buttons-container {
+        right: 100px;
+    }
+}
+
+@media (max-width: 800px) {
+    .drink-buttons-container {
+        position: relative;
+        top: 0;
+        right: 0;
+        transform: none;
+    }
 }
