routing changes, small responsive css fixes

--- a/src/containers/Footer/styles/Footer.scss
+++ b/src/containers/Footer/styles/Footer.scss
@@ -5,10 +5,13 @@
     justify-content: center;
     width: 100%;
     background-color: $page-footer;
+    position: fixed;
+    bottom: 0;
 }
 
 @media (max-width: 600px) {
     .Footer {
         flex-direction: column;
+        position: relative;
     }
 }
