--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,11 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+html,
+body {
+    height: 100%;
+}
+
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
@@ -14,4 +19,8 @@ code {
 
 * {
     box-sizing: border-box;
+}
+
+#root {
+    height: 100%;
 }
