--- a/src/containers/Navbar/styles/Navbar.scss
+++ b/src/containers/Navbar/styles/Navbar.scss
@@ -2,23 +2,22 @@
 
 .navbar-container {
     width: 100%;
-    height: 10%;
     background-color: $page-footer;
     margin: 0;
+    position: fixed;
+    top: 0;
     display: flex;
-    // position: relative;
 }
 
 .navbar-container ul {
     margin: 0;
-    padding: 5px;
+    padding: 10px;
     background-color: $page-footer;
     list-style: none;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    // position: absolute;
     & > li {
         font-size: 28px;
         margin: 0 20px;
@@ -26,9 +25,14 @@
 }
 
 @media (max-width: 600px) {
+    .navbar-container {
+        position: relative;
+    }
+
     .navbar-container ul {
         & > li {
             font-size: 20px;
+            padding: 5px;
         }
     }
 }
