--- a/src/styles/_constans.scss
+++ b/src/styles/_constans.scss
@@ -3,7 +3,7 @@ $fill-color: #6ab3f8;
 $white-color: #fff;
 $page-background: #40739e; // #54a0ff; //#3b3b98;
 $page-footer: #487eb0; // #2e86de; // #5353b4;
-$link-color: #eab543;
+$link-color: #ffc312; //#eab543;
 $navbar-link-active: #ff9f43; //#182c61;
 $navbar-link: #c8d6e5; // #222f3e;
 $water-color: #0097e6;
